[package]
license = "MIT"
edition = "2024"
name = "pontifex"
version = "0.1.0"
readme = "README.md"
homepage = "https://github.com/m1guelpf/pontifex"
repository = "https://github.com/m1guelpf/pontifex"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
keywords = ["aws", "amazon", "enclave", "nitro", "attestation"]
categories = ["cryptography", "hardware-support", "development-tools::ffi"]
description = "An abstraction for building and interacting with AWS Nitro enclaves."

[dependencies]
serde = "1.0.219"
tracing = "0.1.41"
rmp-serde = "1.3.0"
thiserror = "2.0.12"
tokio-vsock = "0.7.1"
tokio = { version = "1.44.2", features = ["io-util"] }

[features]
server = []
client = []
