[package]
license = "MIT"
edition = "2024"
name = "pontifex"
version = "0.1.1"
readme = "README.md"
homepage = "https://github.com/m1guelpf/pontifex"
repository = "https://github.com/m1guelpf/pontifex"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
keywords = ["aws", "amazon", "enclave", "nitro", "attestation"]
categories = ["cryptography", "hardware-support", "development-tools::ffi"]
description = "An abstraction for building and interacting with AWS Nitro enclaves."

[dependencies]
serde = "1.0.219"
tracing = "0.1.41"
rmp-serde = "1.3.0"
thiserror = "2.0.12"
tokio-vsock = "0.7.1"
sha2 = { version = "0.10.9", optional = true }
tokio = { version = "1.44.2", features = ["io-util"] }
serde_bytes = { version = "0.11.17", optional = true }
serde_cbor = { version = "0.11.2", default-features = false, optional = true }
aws-nitro-enclaves-cose = { version = "0.5.2", optional = true, default-features = false }
aws-nitro-enclaves-nsm-api = { version = "0.4.0", optional = true, default-features = false }

[features]
client = []
server = ["tokio/rt"]
nsm = ["nsm-types", "aws-nitro-enclaves-nsm-api/nix", "tokio/sync"]
nsm-types = [
    "dep:sha2",
    "dep:serde_cbor",
    "dep:serde_bytes",
    "dep:aws-nitro-enclaves-cose",
    "dep:aws-nitro-enclaves-nsm-api",
]

[package.metadata.docs.rs]
all-features = true
